Fixed last child margin on mobile

--- a/styles/Spoiler.module.css
+++ b/styles/Spoiler.module.css
@@ -6,14 +6,17 @@
     background: lightgrey;
 }
 
+.details:last-child{
+    margin: 0.25rem 1rem 2rem 1rem;
+}
+
 @media only screen and (max-aspect-ratio: 13/9){
     .details{
         margin: 0.25rem 0;
     }
-}
-
-.details:last-child{
-    margin: 0.25rem 1rem 2rem 1rem;
+    .details:last-child{
+        margin: 0.25rem 0 2rem 0;
+    }
 }
 
 .summary{
